apps/hola-toledo/deploy/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: hola
spec:
  selector:
    app: hola
  ports:
    - protocol: TCP
      port: 8080
